# rokujo-collector-scrapy-terminology

./: .gitignore  LICENSE  README.md  pyproject.toml  scrapy.cfg
terminology/: items.py  middlewares.py  pipelines.py  settings.py
terminology/spiders/: jbits.py
