[project]
name = "rokujo-collector-scrapy-terminology"
version = "0.1.0"
description = "A collection of spiders to scrape terminology and glossaries."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "scrapy>=2.14.2",
]

license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
